--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RevoU Temperature Converter</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="style.css">
     <!--CSS file link source-->
 </head>
 <body>
@@ -44,7 +44,7 @@
         <h4>Celcius to Fahrenheit Formula</h4>
             <p>℉=℃×9/5+32</p>
     </div>
-    <script src="JS/script.js"></script>
+    <script src="script.js"></script>
     <!--JavaScript file link source-->
 </body>
 </html>
